--- a/fuentes/visuales/grado09/guion03/guionAbierto/CS_09_03_CO_Recurso010/Profesor.html
+++ b/fuentes/visuales/grado09/guion03/guionAbierto/CS_09_03_CO_Recurso010/Profesor.html
@@ -16,7 +16,7 @@
 		<p class="cabecera2">
 			Antes de la presentaci&oacute;n</p>
 		<p class="normal">
-			Es importante contextualizar a los estudiantes de manera breve sobre los momentos hist&oacute;ricos que anteceden al siglo XIX (&eacute;poca prehisp&aacute;nica, descubrimiento, conquista, colonia e independencia) en M&eacute;xico. Este ejercicio puede realizarse a partir de interrogantes como:</p>
+			Es importante contextualizar a los estudiantes de manera breve sobre los momentos hist&oacute;ricos que anteceden al siglo XIX (&eacute;poca Prehisp&aacute;nica, Descubrimiento, Conquista, Colonia e Independencia) en M&eacute;xico. Este ejercicio puede realizarse a partir de interrogantes como:</p>
 		<p class="tab1">
 			- &iquest;Qu&eacute; aspectos relevantes de la historia mexicana recuerdan?</p>
 		<p class="tab1">
@@ -26,10 +26,10 @@
 		<p class="tab1">
 			- &iquest;Qu&eacute; elementos de la cultura mexicana recuerdan y por qu&eacute;?</p>
 		<p class="normal">
-			Luego, p&iacute;dales a sus estudiantes que lean con atenci&oacute;n la Ficha del Estudiante. Sugi&eacute;rales que intenten hacer esta lectura teniendo en cuenta las diferencias que pudo haber entre Benito Ju&aacute;rez y Porfirio D&iacute;az. Luego, revise con ellos la presentaci&oacute;n y resuelvan conjuntamente las preguntas que hay en ella. Ampl&iacute;e las respuestas explic&aacute;ndoles con detalle cada caso.</p>
+			Luego, pida a sus estudiantes que lean con atenci&oacute;n la Ficha del Estudiante. Sugi&eacute;rales que intenten hacer esta lectura teniendo en cuenta las diferencias que pudo haber entre Benito Ju&aacute;rez y Porfirio D&iacute;az. Revise con ellos la presentaci&oacute;n y resuelvan conjuntamente las preguntas que hay en ella. Ampl&iacute;e las respuestas explic&aacute;ndoles con detalle cada caso.</p>
 		<p class="cabecera2">
 			Despu&eacute;s de la presentaci&oacute;n</p>
 		<p class="normal">
-			Los estudiantes pueden elaborar un peque&ntilde;o glosario para enriquecer su vocabulario hist&oacute;rico. Para ello, sugi&eacute;rales que busquen&nbsp;t&eacute;rminos como Dictadura y Democracia u otros que usted considere pertinente.&nbsp;Despu&eacute;s, en grupos de tres o cuatro estudiantes pueden discutir y plantear conclusiones&nbsp; acerca de&nbsp; la realidad social que vivi&oacute; M&eacute;xico en el siglo XIX, teniendo en cuenta el gobierno de Benito Ju&aacute;rez y el de Porfirio D&iacute;az. Posteriormente realice una socializaci&oacute;n en donde cada grupo exponga su trabajo y finalmente, entre todos, puedan construir una relator&iacute;a.</p>
+			Los estudiantes pueden elaborar un peque&ntilde;o glosario para enriquecer su vocabulario hist&oacute;rico. Para ello, sugi&eacute;rales que busquen&nbsp;t&eacute;rminos como <span class="negrita">Dictadura </span>y <span class="negrita">Democracia </span>u otros que usted considere pertinente.&nbsp;Despu&eacute;s, en grupos de tres o cuatro estudiantes pueden discutir y plantear conclusiones&nbsp; acerca de&nbsp; la realidad social que vivi&oacute; M&eacute;xico en el siglo XIX, teniendo en cuenta el gobierno de Benito Ju&aacute;rez y el de Porfirio D&iacute;az. Posteriormente realice una socializaci&oacute;n en donde cada grupo exponga su trabajo y finalmente, entre todos, puedan construir una relator&iacute;a.</p>
 	</body>
 </html>
