--- a/fuentes/visuales/grado09/guion03/guionAbierto/CS_09_03_CO_Recurso010/Profesor.html
+++ b/fuentes/visuales/grado09/guion03/guionAbierto/CS_09_03_CO_Recurso010/Profesor.html
@@ -30,6 +30,6 @@
 		<p class="cabecera2">
 			Despu&eacute;s de la presentaci&oacute;n</p>
 		<p class="normal">
-			Los estudiantes pueden elaborar un peque&ntilde;o glosario para enriquecer su vocabulario hist&oacute;rico. Para ello, sugi&eacute;rales que busquen&nbsp;t&eacute;rminos como <span class="negrita">Dictadura </span>y <span class="negrita">Democracia </span>u otros que usted considere pertinente.&nbsp;Despu&eacute;s, en grupos de tres o cuatro estudiantes pueden discutir y plantear conclusiones&nbsp; acerca de&nbsp; la realidad social que vivi&oacute; M&eacute;xico en el siglo XIX, teniendo en cuenta el gobierno de Benito Ju&aacute;rez y el de Porfirio D&iacute;az. Posteriormente realice una socializaci&oacute;n en donde cada grupo exponga su trabajo y finalmente, entre todos, puedan construir una relator&iacute;a.</p>
+			Los estudiantes pueden elaborar un peque&ntilde;o glosario para enriquecer su vocabulario hist&oacute;rico. Para ello, sugi&eacute;rales que busquen&nbsp;t&eacute;rminos como <span class="negrita">dictadura </span>y <span class="negrita">democracia </span>u otros que usted considere pertinente.&nbsp;Despu&eacute;s, en grupos de tres o cuatro estudiantes pueden discutir y plantear conclusiones&nbsp; acerca de&nbsp; la realidad social que vivi&oacute; M&eacute;xico en el siglo XIX, teniendo en cuenta el gobierno de Benito Ju&aacute;rez y el de Porfirio D&iacute;az. Posteriormente realice una socializaci&oacute;n en donde cada grupo exponga su trabajo y finalmente, entre todos, puedan construir una relator&iacute;a.</p>
 	</body>
 </html>
