--- a/fuentes/visuales/grado08/guion03/guionAbierto/CS_08_03_CO_Recurso080/Principal.html
+++ b/fuentes/visuales/grado08/guion03/guionAbierto/CS_08_03_CO_Recurso080/Principal.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<!--<meta name="viewport" id="viewport" content="initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />-->
 		<!-- ************************************************************************
 		*
-		* Motor F13
+		* Motor F6b
 		*
 		* Versión 15.2.22.1
 		*
@@ -15,7 +15,7 @@
 		************************************************************************-->
     
     
-    <title></title>
+    <title>La Campaña Libertadora</title>
 
     <!-- Preloader -->
 	<script src="lib/ppppreloader/1_0/ppppreloader_min.js" type="text/javascript"></script>
@@ -69,7 +69,7 @@
 							"mathjax": "CDN"
 			},
 			localPaths: {	"mathjax": "http://cdn.mathjax.org/mathjax/latest/" } ,
-			remotePaths: {	"module": "motors/f13/",
+			remotePaths: {	"module": "motors/f6b/",
 							"mathjax": "extlib/mathjax/latest/" }
 		});
 
