--- a/fuentes/visuales/grado07/guion04/guionAbierto/CS_07_04_CO_Recurso010/Alumno.html
+++ b/fuentes/visuales/grado07/guion04/guionAbierto/CS_07_04_CO_Recurso010/Alumno.html
@@ -7,27 +7,29 @@
 		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
-		<p class="cabecera1">
+		<p class="cabecera2">
 			El pensamiento humanista</p>
 		<p class="normal">
-			El Humanismo fue una corriente posterior a la Edad Media que tuvo su origen en <span class="negrita">Italia</span> durante el <span class="negrita">siglo XIV</span>; este tuvo un profundo inter&eacute;s en la <span class="negrita">herencia cultural de la antig&uuml;edad cl&aacute;sica</span> y, gracias al estudio de las obras provenientes del <span class="negrita">pensamiento grerromano</span>, propuso un nuevo modelo integral de ser humano que, al seguir los valores cl&aacute;sicos, pod&iacute;a aspirar a la m&aacute;xima perfecci&oacute;n.</p>
+			El Humanismo fue una corriente posterior a la Edad Media que tuvo su origen en <span class="negrita">Italia</span> durante el <span class="negrita">siglo XIV</span>; este tuvo un profundo inter&eacute;s en la <span class="negrita">herencia cultural de la antig&uuml;edad cl&aacute;sica</span> y, gracias al estudio de las obras provenientes del <span class="negrita">pensamiento grecorromano</span>, propuso un nuevo modelo integral de ser humano que, al seguir los valores cl&aacute;sicos, pod&iacute;a aspirar a la m&aacute;xima perfecci&oacute;n.</p>
 		<p class="normal">
 			Durante los siglos XIV, XV y XVI aument&oacute; la curiosidad por el <span class="negrita">estudio de las lenguas</span>, en especial el griego y el lat&iacute;n: herramientas claves para poder leer a los autores cl&aacute;sicos en su lengua original. No obstante, el periodo humanista dio pie a la consolidaci&oacute;n de las <span class="negrita">lenguas nacionales</span>. Por ejemplo, el caso de Antonio de Nebrija, humanista espa&ntilde;ol, quien elabor&oacute; la primera gram&aacute;tica de una lengua vern&aacute;cula (<span class="cursiva">Arte de la lengua castellana,&nbsp;</span>1492).</p>
 		<p class="normal">
 			El Humanismo tuvo un impacto en las diferentes actividades art&iacute;sticas y culturales, en el caso de las <span class="negrita">letras</span> se estudiaron las grandes obras del pasado; en las <span class="negrita">artes pl&aacute;sticas</span> se estudi&oacute; el cuerpo humano tomando como ejemplo las estatuas antiguas; en la <span class="negrita">religi&oacute;n</span> se hizo una relectura de las Sagradas Escrituras en lat&iacute;n y griego; en la <span class="negrita">geograf&iacute;a</span> se revisaron mapas antiguos, libros y diarios de viajes y se descubri&oacute; as&iacute;, un nuevo mundo; por &uacute;ltimo, en la <span class="negrita">pol&iacute;tica</span> se establecieron nuevas concepciones del Estado. Cabe resaltar, que el mayor cambio que se dio a trav&eacute;s del Humanismo fue el paso del <span class="negrita">Teocentrismo al Antropocentrismo</span>.</p>
-		<p class="cabecera2">
+		<p class="cabecera3">
 			Las caracter&iacute;sticas principales del Humanismo&nbsp;</p>
 		<p class="normal">
 			Los aspectos m&aacute;s representativos del pensamiento humanista son:</p>
-		<p class="normal">
-			-Concepci&oacute;n de que <span class="negrita">el mundo humano tiene historia</span> y que esta puede ser una materia de estudio.<br />
-			-Creencia de que <span class="negrita">el hombre es quien construye su propio destino </span>y no Dios como se cre&iacute;a en la Edad Media.<br />
-			-Reconocimiento de la importancia del <span class="negrita">lenguaje como forma de articulaci&oacute;n de los saberes</span>.<br />
-			-Inter&eacute;s por la filosof&iacute;a cl&aacute;sica.<br />
-			-Valoraci&oacute;n de la <span class="negrita">tolerancia religiosa</span> y de la posibilidad de la <span class="negrita">uni&oacute;n de la filosof&iacute;a y la religi&oacute;n</span>.</p>
+		<p class="tab1">
+			- Concepci&oacute;n de que <span class="negrita">el mundo humano tiene historia</span> y que esta puede ser una materia de estudio.</p>
+		<p class="tab1">
+			- Creencia en que <span class="negrita">el hombre es quien construye su propio destino </span>y no Dios como se cre&iacute;a en la Edad Media.</p>
+		<p class="tab1">
+			- Reconocimiento de la importancia del <span class="negrita">lenguaje como forma de articulaci&oacute;n de los saberes</span>.</p>
+		<p class="tab1">
+			- Inter&eacute;s por la filosof&iacute;a cl&aacute;sica.</p>
+		<p class="tab1">
+			- Valoraci&oacute;n de la <span class="negrita">tolerancia religiosa</span> y de la posibilidad de la <span class="negrita">uni&oacute;n de la filosof&iacute;a y la religi&oacute;n</span>.</p>
 		<p class="normal">
 			Los principales humanistas son: Francesco Petrarca, Giovanni Pico della Mirandola, Lorenzo Valla, Tom&aacute;s Moro, Erasmo de Rotterdam, Luis Vives y Elio Antonio de Nebrija.</p>
-		<p class="cabecera2">
-			&nbsp;</p>
 	</body>
 </html>
