--- a/fuentes/visuales/grado07/guion04/guionAbierto/CS_07_04_CO_Recurso010/Profesor.html
+++ b/fuentes/visuales/grado07/guion04/guionAbierto/CS_07_04_CO_Recurso010/Profesor.html
@@ -10,31 +10,33 @@
 		<p class="cabecera1">
 			Objetivo</p>
 		<p class="normal">
-			Presentar las ideas principales&nbsp;<span style="line-height: 1em; font-size: 1em;">del pensamiento humanista, los cambios que produjo en la &eacute;poca y la influencia ideol&oacute;gica de algunos de sus respresentantes.</span></p>
+			Presentar las ideas principales&nbsp;del pensamiento humanista, los cambios que produjo en la &eacute;poca y la influencia ideol&oacute;gica de algunos de sus respresentantes.</p>
 		<p class="cabecera1">
 			Propuesta</p>
 		<p class="cabecera2">
 			Antes de la presentaci&oacute;n</p>
 		<p>
 			Previamente al inicio de la actividad, pregunte a sus estudiantes:</p>
-		<p>
+		<p class="tab1">
 			- &iquest;En qu&eacute; te hace pensar el t&eacute;rmino Humanismo?</p>
-		<p>
+		<p class="tab1">
 			- Determina cu&aacute;ndo y en d&oacute;nde surgieron y se desarrollaron las principales ideas humanistas.</p>
-		<p>
+		<p class="tab1">
 			- &iquest;Qu&eacute; circunstancias hist&oacute;ricas llevaron al desarrollo del Humanismo?</p>
-		<p>
+		<p class="tab1">
 			- &iquest;Cu&aacute;les fueron los principales cambios sociales, pol&iacute;ticos y culturales que se dieron de la Edad Media al Humanismo?</p>
 		<p class="cabecera2">
-			<br />
 			<span style="line-height: 1em;">Despu&eacute;s de la presentaci&oacute;n</span></p>
 		<p class="normal">
-			Una vez analizadas las principales caracter&iacute;sticas del pensamiento humanista, haga que sus estudiantes se reunan en grupos de tres y elaboren, en un primer momento, un cuadro comparativo que d&eacute; raz&oacute;n de c&oacute;mo se manifest&oacute; el humanismo en la religi&oacute;n, la literatura y la filosof&iacute;a.</p>
+			Una vez analizadas las principales caracter&iacute;sticas del pensamiento humanista, haga que sus estudiantes se reunan en grupos de tres y elaboren, en un primer momento, un cuadro comparativo que d&eacute; raz&oacute;n de c&oacute;mo se manifest&oacute; el Humanismo en la religi&oacute;n, la literatura y la filosof&iacute;a.</p>
 		<p class="normal">
-			Con la informaci&oacute;n seleccionada y sintetizada, haga que sus estudiantes escriban un informe en el que expliquen:<br />
-			-Las diferencias entre el Humanismo y la Edad Media<br />
-			-Las relaciones entre el Humanismo y el Renacimiento<br />
-			-Los principales aportes del Humanismo en la Edad Moderna.</p>
+			Con la informaci&oacute;n seleccionada y sintetizada, haga que sus estudiantes escriban un informe en el que expliquen:</p>
+		<p class="tab1">
+			- Las diferencias entre el Humanismo y la Edad Media.</p>
+		<p class="tab1">
+			- Las relaciones entre el Humanismo y el Renacimiento.</p>
+		<p class="tab1">
+			- Los principales aportes del Humanismo en la Edad Moderna.</p>
 		<p class="normal">
 			Al terminar el informe, los estudiantes deber&aacute;n exponer sus conclusiones al resto de la clase.</p>
 	</body>
