--- a/fuentes/visuales/grado07/guion04/guionAbierto/CS_07_04_CO_Recurso130/Profesor.html
+++ b/fuentes/visuales/grado07/guion04/guionAbierto/CS_07_04_CO_Recurso130/Profesor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html hola_ext_inject="disabled" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title></title>
 		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
@@ -10,7 +10,7 @@
 		<p class="cabecera1">
 			Objetivo</p>
 		<p class="normal">
-			La siguiente presentaci&oacute;n le va a permitir a sus alumnos profundizar en la monarqu&iacute;a de Luis XIV &quot;El rey sol&quot;, conocer sus caracter&iacute;sticas y algunos datos biogr&aacute;ficos.</p>
+			La siguiente presentaci&oacute;n permite profundizar las caracter&iacute;sitcas de la monarqu&iacute;a de Luis XIV y los cambios socio-pol&iacute;ticos que se dieron en la Francia de esa &eacute;poca.</p>
 		<p class="cabecera1">
 			Propuesta</p>
 		<p class="cabecera2">
@@ -22,7 +22,7 @@
 		<p class="tab1">
 			- &iquest;Qu&eacute; era el Derecho Divino?</p>
 		<p class="tab1">
-			- &iquest;Qu&eacute; opinan de que todo el estado sea gobernado por la voluntad de un solo hombre?</p>
+			- &iquest;Qu&eacute; opinan de que todo el Estado sea gobernado por la voluntad de un solo hombre?</p>
 		<p class="cabecera2">
 			Durante la presentaci&oacute;n</p>
 		<p class="normal">
@@ -30,7 +30,7 @@
 		<p class="cabecera2">
 			Despu&eacute;s de la presentaci&oacute;n</p>
 		<p class="normal">
-			Al finalizar la lectura inv&iacute;telos a relaizar una mesa redonda en la que debatan acerca de la figura de Luis XIV a la luz de sus excentricidades, gustos y caprichos. Para ello introduzca el debate con reguntas como:</p>
+			Al finalizar la lectura inv&iacute;telos a realiizar una mesa redonda en la que debatan acerca de la figura de Luis XIV a la luz de sus excentricidades, gustos y caprichos. Para ello introduzca el debate con reguntas como:</p>
 		<p class="tab1">
 			- &iquest;Cu&aacute;l era el sentido de una organizaci&oacute;n tan compleja y meticulosa al rededor de las actividades del rey?</p>
 		<p class="tab1">
