--- a/fuentes/visuales/grado07/guion04/guionAbierto/CS_07_04_CO_Recurso130/Alumno.html
+++ b/fuentes/visuales/grado07/guion04/guionAbierto/CS_07_04_CO_Recurso130/Alumno.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html hola_ext_inject="disabled" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title></title>
 		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
@@ -7,35 +7,29 @@
 		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
-		<p class="cabecera2">
-			<span class="negrita">Monarqu&iacute;as absolutas</span></p>
+		<p class="cabecera1">
+			Las monarqu&iacute;as absolutas</p>
 		<p class="normal">
 			El <span class="negrita">Absolutismo</span> consisti&oacute; en la concentraci&oacute;n del poder en manos del rey, quien decid&iacute;a todo a su arbitrio, sin ning&uacute;n l&iacute;mite o control.</p>
 		<p class="normal">
 			En la <span class="negrita">Edad Media</span>, el poder era compartido entre la Iglesia y el monarca. La Iglesia, encabezada por el <span class="negrita">Papa</span>, tomaba las decisiones en los asuntos espirituales, mientras el poder temporal era ejercido por otras instituciones encabezadas por un <span class="negrita">rey</span> o un <span class="negrita">emperador</span>.</p>
 		<p class="normal">
 			Con el surgimiento del <span class="negrita">Renacimiento</span> y la <span class="negrita">Reforma</span>, sucedieron en Europa una serie de transformaciones sociales, pol&iacute;ticas, culturales y filos&oacute;ficas que cambiaron el escenario. Con el <span class="negrita">Absolutismo</span>, los monarcas se consideraban representantes de Dios en la Tierra y por ello su autoridad era santa y absoluta, como la de Dios.</p>
-		<p class="cabecera2">
-			<span class="negrita"><span style="font-size: 18px; line-height: 1em;">La Corte de Luis XIV en Versalles</span></span></p>
+		<p>
+			<span style="font-size: 18px; line-height: 1em;">La corte de Luis XIV en Versalles</span></p>
 		<p class="normal">
-			Lleg&oacute; a ser tal seguridad de <span class="negrita">Luis XIV</span> en que &eacute;l era el representante de Dios, y de esta manera la adoraci&oacute;n que generaba entre sus s&uacute;bditos, que en el palacio de Versalles se instal&oacute; un verdadero culto a su persona.</p>
+			Lleg&oacute; a ser tal la seguridad de <span class="negrita">Luis XIV</span> en que &eacute;l era el representante de Dios, y de esta manera la adoraci&oacute;n que generaba entre sus s&uacute;bditos, que en el palacio de Versalles se instal&oacute; un verdadero culto a su persona.</p>
 		<p class="normal">
-			Luis XIV traslad&oacute; el trono a la ciudad de <span class="negrita">Versalles</span> y all&iacute; construy&oacute; un magn&iacute;fico palacio caracterizado por su fastuosidad y lujos, ejemplo de ello eran los suntuosos jard&iacute;nes que lo rodeaban. Una numerosa corte y un nutrido servicio, se reun&iacute;an entorno suyo para realizar grandes bailes, fiestas, recitales y cacer&iacute;as.</p>
+			Luis XIV traslad&oacute; el trono a la ciudad de <span class="negrita">Versalles</span> y all&iacute; construy&oacute; un magn&iacute;fico palacio caracterizado por su fastuosidad y lujos, ejemplo de ello eran los suntuosos jard&iacute;nes que lo rodeaban. Una numerosa corte y un nutrido servicio, se reun&iacute;an en torno suyo para realizar grandes bailes, fiestas, recitales y cacer&iacute;as.</p>
 		<p class="normal">
 			La vida en la corte versallesca fue una permanente representaci&oacute;n teatral, regulada por una serie de minuciosas ceremonias. Todos los actos del rey, desde que se levantaba hasta que se acostaba, asum&iacute;an un car&aacute;cter sobrenatural. Por ello, la nobleza se traslad&oacute; a Versalles y se consagr&oacute; a buscar alguna tarea dom&eacute;stica cercana al rey, desde ayudarlo a vestirse, servirle un plato o sentarse con &eacute;l en la mesa, se consideraban un acto de servicio que generaba prestigio.</p>
 		<p class="normal">
-			La <span class="negrita">vida cotidiana</span> de Luis XIV se desarrollaba, sin embargo, siempre de un modo igual. Al punto que cualquiero <span class="negrita">cortesano</span> pod&iacute;a saber, en alg&uacute;n momento del d&iacute;a donde se encontraba el rey y en qu&eacute; se ocupaba. despu&eacute;s de levantarse, vestirse, ir al ba&ntilde;o, Luis com&iacute;a un frugal desayuno. Luego asist&iacute;a a la misa en la capilla del palacio, al final de la cual se dedicada a cuestiones varias. Pro ejemplo: el domingo y el lunes se ocupaba de los asuntos del Estado, el mi&eacute;rcoles de las finanzas, el jueves se encargaba de los arquitectos y jardineros. Toda su vida estuvo dedicado al mejoramiento del palacio de Versalles.&nbsp;</p>
+			La <span class="negrita">vida cotidiana</span> de Luis XIV se desarrollaba, sin embargo, siempre de un modo igual. Al punto que cualquier&nbsp;<span class="negrita">cortesano</span> pod&iacute;a saber, en alg&uacute;n momento del d&iacute;a donde se encontraba el rey y en qu&eacute; se ocupaba. Despu&eacute;s de levantarse, vestirse, ir al ba&ntilde;o, Luis com&iacute;a un frugal desayuno. Luego asist&iacute;a a la misa en la capilla del palacio, al final de la cual se dedicada a cuestiones varias. Por ejemplo, el domingo y el lunes se ocupaba de los asuntos del Estado, el mi&eacute;rcoles de las finanzas, el jueves se encargaba de los arquitectos y jardineros. Toda su vida estuvo dedicado al mejoramiento del palacio de Versalles.&nbsp;</p>
 		<p class="normal">
-			A la una Luis retornaba a su rec&aacute;mara luego de un breve paseo en el cual algunos cortesanos intentaban hacerse notar del rey. Entrar al palacio de Versalles era asunto sencillo, lo complicado era encontrar al rey y entablar una conversaci&oacute;n con &eacute;l. Luis sol&iacute;a comer solo atendido por una enorme sevidumbre, ninguno com&iacute;a con &eacute;l y ninguno pod&iacute;a sentarse a la mesa.&nbsp;</p>
+			A la una Luis retornaba a su rec&aacute;mara luego de un breve paseo en el cual algunos cortesanos intentaban hacerse notar del rey. Entrar al palacio de Versalles era asunto sencillo; lo complicado era encontrar al rey y entablar una conversaci&oacute;n con &eacute;l. Luis sol&iacute;a comer solo atendido por una enorme sevidumbre, ninguno com&iacute;a con &eacute;l y ninguno pod&iacute;a sentarse a la mesa.&nbsp;</p>
 		<p class="normal">
 			La tarde era dedicada a la caza o a los paseos en los parques de palacio y entre las cinco y las seis volv&iacute;a a la capilla para la bendici&oacute;n.</p>
 		<p class="normal">
 			Desde las siete a las diez, tres veces a la semana, se realizaban bailes, conciertos, juegos de azar, mientras los camareros renovaban continuamente el buffet. Segu&iacute;a la cena que se desenvolv&iacute;a de la misma manera que el almuerzo. A las once, se desped&iacute;a deseando una buena noche a los cortesanos y volv&iacute;a a sus aposentos.</p>
-		<p class="normal">
-			&nbsp;</p>
-		<p class="normal">
-			V&eacute;sae. Norbert El&iacute;as. La sociedad cortesana.</p>
-		<p class="cabecera3">
-			&nbsp;</p>
 	</body>
 </html>
