--- a/fuentes/visuales/grado07/guion04/guionAbierto/CS_07_04_CO_Recurso130/Principal.html
+++ b/fuentes/visuales/grado07/guion04/guionAbierto/CS_07_04_CO_Recurso130/Principal.html
@@ -15,7 +15,7 @@
 		************************************************************************-->
     
     
-    <title>Luis XIV "El Rey Sol"</title>
+    <title>Luis XIV, el Rey Sol</title>
 
     <!-- Preloader -->
 	<script src="lib/ppppreloader/1_0/ppppreloader_min.js" type="text/javascript"></script>
