--- a/fuentes/visuales/grado09/guion04/guionAbierto/CS_09_04_CO_Recurso090/Alumno.html
+++ b/fuentes/visuales/grado09/guion04/guionAbierto/CS_09_04_CO_Recurso090/Alumno.html
@@ -7,26 +7,24 @@
 		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
-		<p>
-			<span class="negrita">Rep&uacute;blica liberal</span></p>
-		<p>
-			<br />
+		<p class="cabecera2">
+			Rep&uacute;blica liberal</p>
+		<p class="normal">
 			En 1930 ascendi&oacute; al poder <span class="negrita">Enrique Olaya Herrera</span>, el primer presidente liberal de Colombia en el siglo XX. Con su gobierno se inici&oacute; el periodo conocido como la <span class="negrita">Rep&uacute;blica libera</span>l, denominado as&iacute; porque fueron <span class="negrita">cuatro gobiernos seguidos</span>, por un periodo de 16 a&ntilde;os, en que los presidentes de Colombia pertenecieron al partido liberal. El comienzo de la Rep&uacute;blica liberal estuvo marcado por las consecuencias de la crisis del 29. Sin embargo, gracias a la producci&oacute;n agr&iacute;cola, las <span class="negrita">exportaciones de caf&eacute; y oro </span>y algunas <span class="negrita">medidas proteccionistas</span>, la recuperaci&oacute;n econ&oacute;mica fue r&aacute;pida. Por otra parte, a los movimientos sindicales, a diferencia de los gobiernos conservadores, se les prest&oacute; apoyo y se fortalecieron estas organizaciones.&nbsp;</p>
-		<p>
+		<p class="normal">
 			Durante este periodo se realizaron diferentes reformas, entre ellas la <span class="negrita">reforma constitucional de 1936</span>, con el fin de modernizar el pa&iacute;s. En esta reforma se replantearon las funciones de las autoridades bajo la idea del &quot;deber social&quot;, se crearon pol&iacute;ticas para racionalizar los recursos, distribuir la riqueza y proteger a los trabajadores. Tambi&eacute;n se estableci&oacute; la <span class="negrita">libertad de cultos </span>y se reafirm&oacute; que el Estado deb&iacute;a dirigir la educaci&oacute;n y le quit&oacute; esa facultad a la Iglesia cat&oacute;lica. Se plante&oacute; la <span class="negrita">funci&oacute;n social de la propiedad </span>y apareci&oacute; el concepto de &quot;inter&eacute;s social&quot; en la vivienda. En s&iacute;ntesis, esta reforma constitucional estuvo enmarcada en la consagraci&oacute;n de derechos y garant&iacute;as sociales.</p>
-		<p>
+		<p class="normal">
 			Otro hecho significativo fue la <span class="negrita">guerra fronteriza con el Per&uacute; </span>a finales de 1932. En el Amazonas los peruanos fueron expulsados y se reinstaur&oacute; la soberan&iacute;a de Colombia sobre este territorio.</p>
-		<p>
+		<p class="normal">
 			En la Rep&uacute;blica liberal se crearon diferentes centros culturales, como la <span class="negrita">Universidad Nacional</span> o Ciudad Universitaria y el <span class="negrita">Instituto Geogr&aacute;fico Agust&iacute;n Codazzi</span>.</p>
-		<p class="cabecera1">
-			Presidentes de la Rep&uacute;blica liberal<br />
-			&nbsp;</p>
-		<table border="1" cellpadding="1" cellspacing="1" style="width: 700px">
+		<p class="cabecera3">
+			Presidentes de la Rep&uacute;blica liberal</p>
+		<table style="width: 100%">
 			<tbody>
 				<tr>
-					<td>
-						Presidente/ Periodo de gobierno</td>
-					<td>
+					<td width="30%">
+						Presidente y periodo de gobierno</td>
+					<td width="70%">
 						Caracter&iacute;sticas y acontecimientos destacados</td>
 				</tr>
 				<tr>
@@ -48,7 +46,7 @@
 						Eduardo Santos<br />
 						1938-1942</td>
 					<td>
-						Su gobierno es conocido como la &quot;Pausa&quot;, por la interrupci&oacute;n que se hizo a las reformas de la Revoluci&oacute;n en Marcha. Santos tuvo que enfrentar los efectoos de la Segunda Guerra Mundial, y debido a esto, la econom&iacute;a se desestabiliz&oacute;, principalmente por la p&eacute;rdida de mercados para la exportaci&oacute;n de caf&eacute;. Se crearon diferentes estamentos de control, como el <span class="negrita">Instituto de Fomento Municipal</span> y el <span class="negrita">Instituto de Cr&eacute;dito Territorial</span>. Tambi&eacute;n se cre&oacute; la <span class="negrita">Radiodifusora Nacional de Colombia</span>.</td>
+						Su gobierno es conocido como la &quot;Pausa&quot;, por la interrupci&oacute;n que se hizo a las reformas de la Revoluci&oacute;n en Marcha. Santos tuvo que enfrentar los efectos de la Segunda Guerra Mundial, y debido a esto, la econom&iacute;a se desestabiliz&oacute;, principalmente por la p&eacute;rdida de mercados para la exportaci&oacute;n de caf&eacute;. Se crearon diferentes estamentos de control, como el <span class="negrita">Instituto de Fomento Municipal</span> y el <span class="negrita">Instituto de Cr&eacute;dito Territorial</span>. Tambi&eacute;n se cre&oacute; la <span class="negrita">Radiodifusora Nacional de Colombia</span>.</td>
 				</tr>
 				<tr>
 					<td>
