--- a/fuentes/visuales/grado09/guion04/guionAbierto/CS_09_04_CO_Recurso090/Profesor.html
+++ b/fuentes/visuales/grado09/guion04/guionAbierto/CS_09_04_CO_Recurso090/Profesor.html
@@ -9,26 +9,29 @@
 	<body>
 		<p class="cabecera1">
 			<span style="line-height: 1em; font-size: 1em;">Objetivo</span></p>
-		<p>
+		<p class="normal">
 			Identificar los principales personajes y acontecimientos de la Rep&uacute;blica liberal.</p>
 		<p class="cabecera1">
 			Propuesta</p>
+		<p class="cabecera2">
+			Antes de la presentaci&oacute;n</p>
 		<p class="normal">
-			<span class="negrita">Antes de la presentaci&oacute;n</span><br />
-			<br />
 			Se sugiere contextualizar sobre los principales rasgos que caracterizaron la Hegemon&iacute;a conservadora y cu&aacute;l era el panorama econ&oacute;mico, pol&iacute;tico y social a la llegada de los liberales al poder. Realice una socializaci&oacute;n o lluvia de ideas sobre los planteamientos ideol&oacute;gicos del liberalismo que conocen los estudiantes.&nbsp;Indague por los personajes y acontecimientos ocurridos durante este periodo que conocen o referencian los estudiantes.</p>
-		<p>
-			<span class="negrita">Despu&eacute;s de la presentaci&oacute;n</span></p>
-		<p>
+		<p class="cabecera2">
+			Despu&eacute;s de la presentaci&oacute;n</p>
+		<p class="normal">
 			Se sugiere realizar un debate o plenaria con los estudiantes, a partir de los siguientes t&oacute;picos:</p>
-		<p>
-			Identificar cu&aacute;les fueron los principales cambios a nivel estructural, econ&oacute;mico y social que vivi&oacute; el pa&iacute;s.<br />
-			- &iquest;Cu&aacute;les fueron las caracter&iacute;sticas de la lucha por la tierra y qu&eacute; medidas tomaron los gobiernos?<br />
-			- &iquest;Cu&aacute;l fue la importancia de las luchas sindicales, y de las pol&iacute;ticas y reformas laborales?<br />
+		<p class="tab1">
+			- Identificar cu&aacute;les fueron los principales cambios a nivel estructural, econ&oacute;mico y social que vivi&oacute; el pa&iacute;s.</p>
+		<p class="tab1">
+			- &iquest;Cu&aacute;les fueron las caracter&iacute;sticas de la lucha por la tierra y qu&eacute; medidas tomaron los gobiernos?</p>
+		<p class="tab1">
+			- &iquest;Cu&aacute;l fue la importancia de las luchas sindicales, y de las pol&iacute;ticas y reformas laborales?</p>
+		<p class="tab1">
 			- &iquest;Qu&eacute; diferencias encuentran entre la Hegemon&iacute;a conservadora y la Rep&uacute;blica liberal?</p>
-		<p>
+		<p class="normal">
 			Posteriormente, los estudiantes pueden realizar una comparaci&oacute;n entre aspectos significativos de las Constituciones de 1886 y 1936.</p>
-		<p>
+		<p class="normal">
 			Finalmente, pueden redactar un informe o ensayo en el que expliquen las generalidades del tema y expongan su opini&oacute;n o punto de vista. Es importante la argumentaci&oacute;n en este tipo de ejercicios, ya que fortalece el desarrollo del pensamiento cr&iacute;tico y la capacidad discursiva.</p>
 	</body>
 </html>
