--- a/fuentes/visuales/grado09/guion04/guionAbierto/CS_09_04_CO_Recurso150/Profesor.html
+++ b/fuentes/visuales/grado09/guion04/guionAbierto/CS_09_04_CO_Recurso150/Profesor.html
@@ -7,32 +7,35 @@
 		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
-		<p>
-			<span style="font-size: 24px; line-height: 1em;">Objetivo</span></p>
-		<p>
+		<p class="cabecera1">
+			Objetivo</p>
+		<p class="normal">
 			Identificar los principales acontecimientos hist&oacute;ricos, sus caracter&iacute;sticas y los personajes destacados en Colombia hacia la mitad del siglo XX.</p>
 		<p class="cabecera1">
 			Propuesta</p>
 		<p class="cabecera2">
 			Antes de la presentaci&oacute;n</p>
-		<p>
+		<p class="normal">
 			Realice una lluvia de ideas con los estudiantes para darle contexto a los gobiernos conservadores. Para ello, plantee los siguientes t&oacute;picos:&nbsp;</p>
-		<p>
-			<span style="line-height: 1em; font-size: 1em;">&iquest;Qu&eacute; aspectos caracterizaron y se destacaron en la Hegemon&iacute;a conservadora?</span></p>
-		<p>
-			<span style="line-height: 1em; font-size: 1em;">&iquest;Cu&aacute;les fueron las principales caracter&iacute;sticas de la Rep&uacute;blica liberal?</span></p>
-		<p>
-			<span style="line-height: 1em; font-size: 1em;">&iquest;Qu&eacute; acontecimiento conocen o identifican de este periodo?</span></p>
-		<p>
-			&iquest;A qu&eacute; se conoce como la violencia en Colombia? &iquest;Qu&eacute; conocen de este periodo?</p>
+		<p class="tab1">
+			- &iquest;Qu&eacute; aspectos caracterizaron y se destacaron en la Hegemon&iacute;a conservadora?</p>
+		<p class="tab1">
+			- &iquest;Cu&aacute;les fueron las principales caracter&iacute;sticas de la Rep&uacute;blica liberal?</p>
+		<p class="tab1">
+			- &iquest;Qu&eacute; acontecimiento conocen o identifican de este periodo?</p>
+		<p class="tab1">
+			- &iquest;A qu&eacute; se conoce como la violencia en Colombia? &iquest;Qu&eacute; conocen de este periodo?</p>
+		<p class="normal">
+			Luego, revise con los estudiantes la presentaci&oacute;n. Inv&iacute;telos a que hagan una lluvia de ideas sobre el contenido de cada imagen.&nbsp;</p>
 		<p class="cabecera2">
 			Despu&eacute;s de la presentaci&oacute;n</p>
-		<p>
-			Pida a los estudiantes que realicen un esquema, un flujo de ideas o un mapa, que luego pueden socializar en grupos de tres.&nbsp;<span style="line-height: 1em; font-size: 1em;">A partir de la socializaci&oacute;n se aclarar&aacute;n dudas. Cada grupo debe preparar una relator&iacute;a para consolidar los aspectos m&aacute;s significativos.</span></p>
-		<p>
-			<span style="line-height: 1em; font-size: 1em;">Posteriormente, invite a los grupos a debatir los siguientes t&oacute;picos:</span></p>
-		<p>
-			- El conflicto bipartidista en Colombia.<br />
+		<p class="normal">
+			Pida a los estudiantes que realicen un esquema, un flujo de ideas o un mapa, que luego pueden socializar en grupos de tres.&nbsp;A partir de la socializaci&oacute;n se aclarar&aacute;n dudas. Cada grupo debe preparar una relator&iacute;a para consolidar los aspectos m&aacute;s significativos.</p>
+		<p class="normal">
+			Posteriormente, invite a los grupos a debatir los siguientes t&oacute;picos:</p>
+		<p class="tab1">
+			- El conflicto bipartidista en Colombia.</p>
+		<p class="tab1">
 			- El uso de la violencia para defender ideales pol&iacute;ticos.</p>
 		<p>
 			Finalmente, como cierre invite a los estudiantes a dibujar caricaturas para ser exhibidas en el aula o en el colegio. Esta actividad se puede realizar a mano o con programas como MomentCam, Flash Face, C&aacute;mara Otaku, Meme Generator o Image Chef. Cada caricatura debe ir acompa&ntilde;ada de una breve explicaci&oacute;n o argumentaci&oacute;n.</p>
