--- a/fuentes/visuales/grado07/guion03/guionAbierto/CS_07_03_CO_Recurso260/Principal.html
+++ b/fuentes/visuales/grado07/guion03/guionAbierto/CS_07_03_CO_Recurso260/Principal.html
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<!--<meta name="viewport" id="viewport" content="initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />-->
 		<!-- ************************************************************************
 		*
 		* Motor F10b
 		*
-		* Versión 15.12.22.1
+		* Versión 15.2.22.1
 		*
 		* Autor: Javier Garcés - Sinergia sistemas informáticos
 		* Autor: Jesús Gironés - Sinergia sistemas informáticos
@@ -15,7 +15,7 @@
 		************************************************************************-->
     
     
-    <title>Hernán Cortés y la Noche Triste</title>
+    <title></title>
 
     <!-- Preloader -->
 	<script src="lib/ppppreloader/1_0/ppppreloader_min.js" type="text/javascript"></script>
@@ -23,7 +23,7 @@
 	<!-- inicialización MathJax -->
 	<script type="text/x-mathjax-config">
 		MathJax.Hub.Config({
-			tex2jax: {inlineMath: [['\\(','\\)']]},
+			tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
 			showMathMenu: false,
 			SVG: {
 				scale: 93,
@@ -34,36 +34,12 @@
 
 	<!-- inicialización general -->
 	<script type="text/javascript">
-		// Rutina para obtener dinámicamente un parámetro de la URL
-		function getQueryParam(pName) {
-			var CurrURL = location.href;
-			var ParamsPos = CurrURL.indexOf("?", 0);
-			if (ParamsPos > 0) {
-				var ParamsStr = CurrURL.substr(ParamsPos+1, CurrURL.length);
-				var Params = ParamsStr.split("&");
-				for (var i=0;i<Params.length;i++) {
-					if (Params[i].indexOf(pName + "=", 0) === 0) {
-						return unescape(Params[i].substr(pName.length + 1, Params[i].length));
-					}
-				}
-			}
-			return "";
-		}
-		// Obtenemos el origen del xml de datos mirando la Query String
-		var datos_xml = getQueryParam("datos_xml");
-		var datos_from = "redirect";
-		// Si no hay nada, ponemos los valores por defecto
-		if (datos_xml == "") {
-			datos_xml = "data/datos.xml" + "?time=" + new Date().getTime();
-			datos_from = "data";
-		}
-
 		// Volcado de errores del preloader por la consola
 		var manifest = {
 			// Bloques de elementos a descargar
 			blocks: [
 					{ type: "manifest", files: [{ from: "module", file: "motor/manifest.json" }] },
-					{ type: "xml", files: [{ from: datos_from, file: datos_xml, id: "datos_xml" }] }
+					{ type: "xml", files: [{ from: "data", file: "data/datos.xml" + "?time=" + new Date().getTime(), id: "datos_xml" }] }
 			],
 			// Sin spinner automático
 			spinner: "no",
